[package]
name = "cita-crypto"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
description = "A switch to choice algorithm, secp256k1, ed25519, sm2"
license = "Apache-2.0"
edition = "2018"

[dependencies]
cita-crypto-trait = "0.1"
cita-ed25519 = { version = "0.1", optional = true  }
cita-secp256k1 = { version = "0.1", optional = true  }
cita-sm2 = { version = "0.1", optional = true  }

[features]
default = []
secp256k1 = ["cita-secp256k1", "cita-secp256k1/sha3hash"]
ed25519 = ["cita-ed25519", "cita-ed25519/blake2bhash"]
sm2 = ["cita-sm2", "cita-sm2/sm3hash"]
